# wazira

./: CMakeLists.txt  README.md  docker-compose.yml
ci/: README.md  nginx.conf
client/: README.md
client/extension/: Dockerfile  README.md  manifest.json  package.json  tsconfig.json  vite.config.ts
client/extension/src/background/: background.ts
client/extension/src/content/: content.ts
client/extension/src/options/: Options.tsx  main.tsx  options.html
client/extension/src/popup/: Popup.tsx  main.tsx  popup.html
client/mobile/: App.tsx  README.md
client/mobile/ar/: AROverlay.tsx  VoiceSearch.tsx
common/: README.md  schemas.py  types.ts
crawler/: CMakeLists.txt  Dockerfile  README.md
crawler/cli/: CMakeLists.txt  main.cpp
crawler/content_store/: CMakeLists.txt  content_store.cpp  content_store.h
crawler/crawler/: CMakeLists.txt  crawler.cpp  crawler.h
crawler/crawler/include/: inverted_index.h  stemmer.h  tokenizer.h
crawler/merkle_tree/: CMakeLists.txt  merkle_tree.cpp  merkle_tree.h
crawler/p2p_dht/: CMakeLists.txt  p2p_dht.cpp  p2p_dht.h
docs/: README.md
indexer/: CMakeLists.txt  Dockerfile  README.md  bindings.cpp  seal_wrapper.cpp  seal_wrapper.h  search_service.cpp
indexer/include/: httplib.h
indexer/inverted_index/: CMakeLists.txt  inverted_index.cpp
indexer/merkle_diff/: CMakeLists.txt  merkle_diff.cpp  merkle_diff.h
indexer/stemmer/: CMakeLists.txt  stemmer.cpp
indexer/tests/: test_indexer.cpp  test_seal_wrapper.py
indexer/tokenizer/: CMakeLists.txt  tokenizer.cpp  tokenizer.h
sandbox/: Dockerfile  README.md  firecracker_manager.py  frida_script.js  js_instrumentation.py  requirements.txt
service/: Dockerfile  app.py  requirements.txt
tests/: test_crawler.cpp
